@@ -1,3 +1,8 @@
+SimpleComplex/Utils 1.x, 2017-07-02
+-----------------------------------
+- Ini parsing: suppress PHP error wrongly reported as syntax warning.
+- Ini parsing: on error, check if ini content contains 'special' key.
+
 SimpleComplex/Utils 1.x, 2017-07-01
 -----------------------------------
 - Added the locale package's locale-text CLI commands to the common CLI script.
